5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1734_2507.log
== TEST (2019-05-16 17:00:43) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
ra = int(input("Retirada de peixes: "))
qm = 8000
pc = pc/100
pt = qi
meses = 0
while pt>=0 and pt<=qm:
	pt = (pt + (pt * pc)) -ra
	anos = anos + 1
if pt >= qm:
	print("MAXIMO")
	print(meses)
if pt <= 0:
	print("ZERO")
	print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    anos = anos + 1
NameError: name 'anos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:01:06) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
ra = int(input("Retirada de peixes: "))
qm = 8000
pc = pc/100
pt = qi
meses = 0
while pt>=0 and pt<=qm:
	pt = (pt + (pt * pc)) -ra
	meses = meses + 1
if pt >= qm:
	print("MAXIMO")
	print(meses)
if pt <= 0:
	print("ZERO")
	print(meses)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:03:07) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
qm = 8000
pc = pc/100
pt = qi
meses = 0
while pt>=0 and pt<=qm:
	ra = int(input("Retirada de peixes: "))
	pt = (pt + (pt * pc)) -ra
	meses = meses + 1
if pt >= qm:
	print("MAXIMO")
	print(meses)
if pt <= 0:
	print("ZERO")
	print(meses)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:03:37) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
qm = 8000
pc = pc/100
pt = qi
meses = 0
while pt>=0 and pt<=qm:
	ra = int(input("Retirada de peixes: "))
	pt = (pt + (pt * pc)) -ra
	meses = meses + 1
if pt >= qm:
	print("MAXIMO")
	print(meses)
if pt <= 0:
	print("ZERO")
	print(meses)
-- EXECUTION TIME:
0.182535
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
